# autometric

./: .gitignore  README.md  core.html  env.yml  index.html  pixi.toml  robots.txt  search.json  settings.ini  sitemap.xml
autometric/: 0d1_branching_datasets.py  _modidx.py  autoencoders.py  criteria.py  datasets.py  geometry.py  manifolds.py  n0d1_branching_datasets.py  n0d2_datasets.py  n0u1_visualization.py  n0u2_jacobian.py  n1d_embedding_analysis.py  n3b7_phate_embedding_experiments.py  util.py
data/: sphere_encoder.pt  torus_encoder.pt
nbs/: 0d Datasets.ipynb  0u Utils.ipynb  0u1 Visualization.ipynb  0u2 Jacobian.ipynb  1 Geometer's Delight.ipynb  1a Levi-Cevita Connection.ipynb  1b Pullback Metric.ipynb  1c Riemannian Manifolds.ipynb  1d Embedding Analysis.ipynb  2a autoencoder.ipynb  2a1 Training Example.ipynb  2b Criteria.ipynb  3b2 UMAP Embeddings.ipynb  3b7 PHATE Embedding Experiments.ipynb  3c Branch Comparisons.ipynb  3c1 Training AEs on Branches.ipynb  4 Visualization Tools.ipynb  Untitled.ipynb  Untitled1.ipynb  _quarto.yml  index.ipynb  run_PHATE_Experiments.py  save  sidebar.yml  util.ipynb
paper/: index.qmd
src/: README.md  pyproject.toml
src/autometric/: _modidx.py  autometric.py  branch-datasets.py  branch_datasets.py  connections.py  criteria.py  datasets.py  geodesics.py  geodesics_jax.py  geometry.py  jacobian.py  manifolds.py  metrics.py  off_manifold.py  self-evaluating-datasets.py  self_evaluating_datasets.py  triangle_condition_curvature.py  utils.py  visualization.py
src/autometric/experiments/: pullback_comparison.py
(+53 files in other folders)
