[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo_name"
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools]
zip-safe = true
# package_dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
# include = ["repo_name*"]  # package names should match these glob patterns (["*"] by default)
# exclude = ["repo_name.tests*"]  # exclude packages matching these glob patterns (empty by default)
# namespaces = false  # to disable scanning PEP 420 namespaces (true by default)